--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 /*****CSS GLOBAL*****/
 
+@font-face {
+    font-family: "Lato";
+    src:    url("font/Lato-Black.ttf") format("ttf"),
+            url("font/Lato-BlackItalic.ttf") format("ttf")
+            url("font/Lato-Bold.ttf") format("ttf")
+            url("font/Lato-Regular.ttf") format("ttf")
+   }
+
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +25,7 @@ body {
     background-image: linear-gradient(rgba(236, 203, 131, 0.3), rgba(236, 203, 131, 0.3)), url(/images/jeuDe.jpg);
     background-size: cover;
     background-position: center;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     font-weight: 300;
     position: relative;
     height: 100vh;
